2006-09-22  Carlos O'Donell  <carlos@systemhalted.org>

	* sysdeps/pthread/gai_misc.h: New file.

2006-09-21  Richard Sandiford  <richard@codesourcery.com>

	* linuxthreads.texi (pthread_mutex_lock): Fix double close bracket.
	Fix markup.

2006-07-24  Daniel Jacobowitz  <dan@codesourcery.com>

	* pthread.c: Check PTHREAD_SIGBASE before #error.
	(__pthread_sig_restart, __pthread_sig_cancel,
	__pthread_sig_debug): Use PTHREAD_SIGBASE if defined.
	(init_rtsigs): Don't reset the signals if a port specified which
	ones to use.

2006-07-24  Ian Lance Taylor  <ian@airs.com>

	* specific.c (pthread_key_delete): Handle being called late.

2006-07-24  Daniel Jacobowitz  <dan@codesourcery.com>

	* spinlock.h (atomic_increment, atomic_decrement): Renamed to...
	(pthread_atomic_increment, pthread_atomic_decrement): ... these.
	* pthread.c (__pthread_restart_old, __pthread_suspend_old,
	__pthread_timedsuspend_old): Update calls.

2006-06-02  Carlos O'Donell  <carlos@systemhalted.org>

	* manager.c [USE_TLS && STACK_GROWS_UP] (pthread_free):
	guardaddr is th->p_stackaddr.

2006-05-05  Daniel Jacobowitz  <dan@codesourcery.com>

	* sysdeps/ia64/tls.h, sysdeps/s390/tls.h,
	sysdeps/sparc/tls.h: Include <stdint.h>.

2006-05-05  Khem Raj  <kraj@mvista.com>

	* sysdeps/powerpc/tls.h: Include <stdint.h>.

2006-05-01  Daniel Jacobowitz  <dan@codesourcery.com>

	* manager.c (pthread_handle_create): Use CLONE_SYSVSEM.
	* pthread.c (__pthread_initialize_manager): Likewise.

2006-05-01  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile (tests): Add tst-sighandler1 and tst-sighandler2.
	* tst-sighandler1.c, tst-sighandler2.c: New files.
	* pthread.c (pthread_onexit_process): Reset p_signal_jmp.

2006-04-26  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/powerpc/Makefile (CFLAGS-pt-initfini.s): Use +=, not =, to
	append.  Remove duplicate flags.

2006-04-26  Petr Salinger  <Petr.Salinger@seznam.cz>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	[BZ #2590]