@@ -1,3 +1,9 @@
+2006-10-01  Petr Salinger  <Petr.Salinger@seznam..cz>
+
+	* sysdeps/pthread/gai_misc.h (__gai_start_notify_thread): Use
+	__sigprocmask.
+	(__gai_create_helper_thread): Likewise.
+
 2006-09-22  Carlos O'Donell  <carlos@systemhalted.org>
 
 	* sysdeps/pthread/gai_misc.h: New file.
